--- a/CorujaPresentation/Areas/Especialista/Views/Ambiente/Avaliacoes.cshtml
+++ b/CorujaPresentation/Areas/Especialista/Views/Ambiente/Avaliacoes.cshtml
@@ -4,6 +4,36 @@
     Layout = "~/Views/Shared/_LayoutEspecialista.cshtml";
 }
 
+
+<div role="main">
+    <span id="maincontent"></span><h2>Baixar Avaliação</h2><div class="box generalbox center clearfix">
+        <div class="no-overflow">
+            <div id="instrucoes" style="line-height:18px; font-size:1.5rem;">
+                <p>Escolha uma combinação de domínios para compor sua Avaliação. O arquivo que baixar, conterá o programa Aplicação Coruja, o qual você utilizará para aplicar a Avaliação. Veja mais em <a href="http://canal.corujaedu.com.br/mod/page/view.php?id=76#baixando">Baixando a Avaliação</a>&nbsp;(Lembre-se, nosso software roda apenas em computadores com o Sistema Operacional Windows).</p>
+                <p>Recomendamos baixar e aplicar uma Avaliação com os três domínios (Língua Portuguesa, Matemática e Habilidades de Aprendizagem).</p>
+                <p>É necessário baixar uma nova Avaliação, caso queira alterar a combinação a ser aplicada.</p>
+                <p>
+                    Utilize os filtros da tabela ou a busca por nome do arquivo para encontrar o arquivos desejado. Caso seja necessário, navegue pelas páginas usando os ícones no canto superior direito da tabela.
+                </p>
+                <p style="font-size: 2rem; color: red;">
+                    Aguarde o carregamento da lista.
+                </p>
+            </div>
+
+            <div style="width:80%;">
+                <!-- Place this tag where you want the Awesome Table Widget to render -->
+                <iframe data-type="AwesomeTableView" name="147499162097331" src="https://view-awesome-table.com/-KPFMNi9wRtWHI_qvAC0/view" scrolling="no" style="height:997px;"></iframe>
+            </div>
+
+            <!-- Place this tag in your head or just before your close body tag. -->
+            <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
+        </div>
+    </div><div class="modified">Última atualização: segunda, 15 Ago 2016, 20:24</div>
+</div>
+
+
+
+
     <div class="row HeadRowEspec">
         <div class="col-md-9">
             <h2>Baixe sua Avaliação <i class="fa fa-fw fa-download"></i></h2>
