--- a/CorujaPresentation/Areas/Especialista/Views/Ambiente/Resultados.cshtml
+++ b/CorujaPresentation/Areas/Especialista/Views/Ambiente/Resultados.cshtml
@@ -6,3 +6,36 @@
 
 <h2>Resultados</h2>
 
+<div id="instr" style="font-size:1.5rem;">
+    <p>Envie os arquivos de Resultado da Avaliação para receber, em até 3 dias úteis, os Relatórios correspondentes.</p>
+    <p>Lembre-se que um (01) Resultado é referente à uma (01) Avaliação realizada por uma (01) criança, independente de quantos domínios compunha a Avaliação.</p>
+    <p>Essa página irá listar apenas os Relatórios recentes.</p>
+</div>
+
+
+
+<div class="submissionstatustable">
+    <h3>Status de envio</h3><div class="box boxaligncenter submissionsummarytable">
+        <table class="generaltable">
+            <tbody>
+                <tr class="">
+                    <td class="cell c0" style="">Status de envio</td>
+                    <td class="cell c1 lastcol" style="">Nenhuma tentativa</td>
+                </tr>
+                <tr class="">
+                    <td class="cell c0" style="">-</td>
+                    <td class="submissionnotgraded cell c1 lastcol" style="">-</td>
+                </tr>
+                <tr class="">
+                    <td class="cell c0" style="">Última modificação</td>
+                    <td class="cell c1 lastcol" style="">quarta, 22 Jun 2016, 15:46</td>
+                </tr>
+                <tr class="lastrow">
+                    <td class="cell c0" style="">Comentários sobre o resultado</td>
+                    <td class="cell c1 lastcol" style=""><div class="box boxaligncenter plugincontentsummary summary_assignsubmission_comments_23"><div class="commentscontainer"><div style="display:none" id="cmt-tmpl"><div class="comment-message"><div class="comment-message-meta"><span class="picture">___picture___</span><span class="user">___name___</span> - <span class="time">___time___</span></div><div class="text">___content___</div></div></div><div class="mdl-left"><a class="showcommentsnonjs" href="http://canal.corujaedu.com.br/mod/assign/view.php?id=50&amp;action&amp;rownum=0&amp;useridlistid=57ea96be2f1c6547972801&amp;nonjscomment=1&amp;comment_itemid=23&amp;comment_context=163&amp;comment_component=assignsubmission_comments&amp;comment_area=submission_comments">Mostrar comentários</a><a class="comment-link" id="comment-link-57ea96be65f36" href="#"><img id="comment-img-57ea96be65f36" src="http://canal.corujaedu.com.br/theme/image.php/corujaedu/core/1474652278/t/collapsed" alt="Comentários" title="Comentários"><span id="comment-link-text-57ea96be65f36">Comentários (0)</span></a><div id="comment-ctrl-57ea96be65f36" class="comment-ctrl"><ul id="comment-list-57ea96be65f36" class="comment-list"><li class="first"></li></ul><div id="comment-pagination-57ea96be65f36" class="comment-pagination"></div><div class="comment-area"><div class="db"><textarea name="content" rows="2" id="dlg-content-57ea96be65f36" cols="20" style="color: grey;"></textarea></div><div class="fd" id="comment-action-57ea96be65f36"><a id="comment-action-post-57ea96be65f36" href="#">Salvar comentário</a><span> | </span><a id="comment-action-cancel-57ea96be65f36" href="#">Cancelar</a></div></div><div class="clearer"></div></div></div></div></div></td>
+                </tr>
+            </tbody>
+        </table>
+    </div><div class="box generalbox submissionaction"><div class="singlebutton"><form method="get" action="http://canal.corujaedu.com.br/mod/assign/view.php"><div><input value="Enviar Resultado" type="submit"><input name="id" value="50" type="hidden"><input name="action" value="editsubmission" type="hidden"></div></form></div><div class="box boxaligncenter submithelp">Envie um resultado para receber o relatório</div></div>
+</div>
+
