--- a/CorujaPresentation/Views/Shared/_Layout.cshtml
+++ b/CorujaPresentation/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                             <a class="dropdown-toggle header" data-toggle="dropdown" href="#">Produtos<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 
-                                <li>@Html.ActionLink("Especialista", "Home", "Ambiente", new { Area = "Especialista" }, new { @class = "header" })</li>
+                                <li>@Html.ActionLink("Especialista", "SobreEspecialista", "Ambiente", new { Area = "Especialista" }, new { @class = "header" })</li>
 
                                 <li>@Html.ActionLink("Escola", "Produtos", "Home", null, new { @class = "header" })</li>
                                 <li>@Html.ActionLink("Cursos e Palestras", "Produtos", "Home", null, new { @class = "header" })</li>
