--- a/CorujaPresentation/Areas/CursosPalestras/Views/Cursos/Index.cshtml
+++ b/CorujaPresentation/Areas/CursosPalestras/Views/Cursos/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 
-<section id="CursosPalestrasSection" class="section section-gray">
+@*<section id="CursosPalestrasSection" class="section section-gray">
     <div class="container">
         <h2 class="section-heading text-center">Cursos e Palestras</h2>
         <div class="row">
@@ -23,5 +23,20 @@
 
     </div>
 
+</section>*@
+
+<!-- CURSOS E PALESTRAS	================================= -->
+<section id="benefits" class="benefits-section section-dark section">
+    <div class="container">
+        <h2 class="section-heading text-center">Cursos e Palestras</h2>
+        <div class="row text-center">
+            <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+                <p>A Coruja também oferece cursos e palestras sobre temas relacionados à educação. Para professores, gestores, especialistas e pais.</p>
+            </div>
+        </div>
+        <div class="cleaner_h30"></div>
+        <div class="closing-buttons tada animated done-animation" data-animation="tada"><a href="http://blog.corujaedu.com.br/tagged/curso" class="btn btn-lg btn-primary">Conheça nossos Cursos</a></div>
+        <div class="cleaner_h30"></div>
+    </div>
 </section>
 
