--- a/CorujaPresentation/Areas/Especialista/Views/Ambiente/Relatorios.cshtml
+++ b/CorujaPresentation/Areas/Especialista/Views/Ambiente/Relatorios.cshtml
@@ -1,8 +1,15 @@
-﻿
+﻿@using CorujaPresentation.Models
+@model IEnumerable<Report>
+
 @{
     ViewBag.Title = "Relatorios";
     Layout = "~/Views/Shared/_LayoutEspecialista.cshtml";
 }
 
-<h2>Relatorios</h2>
+
+<div class="row HeadRowEspec">
+    <div class="col-md-9">
+        <h2>Relatórios <i class="fa fa-fw fa-download"></i></h2>
+    </div>
+</div>
 
