--- a/CorujaPresentation/Views/Conta/Cadastro.cshtml
+++ b/CorujaPresentation/Views/Conta/Cadastro.cshtml
@@ -44,6 +44,8 @@
 
                                 <div class="col-sm-12">
 
+                                    @Html.HiddenFor(m => m.IdUser)
+
                                     <div class="form-group">
                                         @*Nome*@
                                         <div class="col-sm-6">
