--- a/CorujaPresentation/Areas/Especialista/Views/Ambiente/Resultados.cshtml
+++ b/CorujaPresentation/Areas/Especialista/Views/Ambiente/Resultados.cshtml
@@ -1,8 +1,17 @@
-﻿
+﻿@using CorujaPresentation.Models 
+@model IEnumerable<UserFile>
+
 @{
     ViewBag.Title = "Resultados";
     Layout = "~/Views/Shared/_LayoutEspecialista.cshtml";
 }
 
-<h2>Resultados</h2>
+
+<div class="row HeadRowEspec">
+    <div class="col-md-9">
+        <h2>Resultados <i class="fa fa-fw fa-institution"></i></h2>
+    </div>
+</div>
+
+
 
