--- a/CorujaPresentation/Areas/Especialista/Views/Ambiente/Avaliacoes.cshtml
+++ b/CorujaPresentation/Areas/Especialista/Views/Ambiente/Avaliacoes.cshtml
@@ -4,5 +4,12 @@
     Layout = "~/Views/Shared/_LayoutEspecialista.cshtml";
 }
 
-<h2>Avaliacoes</h2>
 
+
+<div class="row HeadRowEspec">
+    <div class="col-md-9">
+        <h2>Baixe sua Avaliação <i class="fa fa-fw fa-download"></i></h2>
+    </div>
+</div>
+
+  
