--- a/CorujaSystem/Views/Shared/_LayoutEspecialista.cshtml
+++ b/CorujaSystem/Views/Shared/_LayoutEspecialista.cshtml
@@ -103,6 +103,10 @@
                                         </li>
 
                                         <li>
+                                            @Html.ActionLink("PROVA DEMO", "Demo", "Ambiente", new { Area = "Especialista" }, new { @class = "header" })
+                                        </li>
+
+                                        <li>
                                             @Html.ActionLink("AVALIAÇÕES", "Avaliacoes", "Ambiente", new { Area = "Especialista" }, new { @class = "header" })
                                         </li>
                                         
