--- a/CorujaSystem/Views/Home/Testes.cshtml
+++ b/CorujaSystem/Views/Home/Testes.cshtml
@@ -9,7 +9,7 @@
 
 <h1>Upload</h1>
 
-<section id="Msg" class="section section-gray">
+<section id="Msg" class="section section-dark">
     <div class="container">
         <h2 class="section-heading text-center">Canal Coruja</h2>
         <div class="row">
@@ -23,15 +23,15 @@ new { enctype = "multipart/form-data" }))
 
                     <fieldset>
                         <legend>Upload a file</legend>
-                
+
                         <div class="editor-field">
                             @Html.TextBox("file", "", new { type = "file" })
                         </div>
-                        
+
                         <div class="editor-field">
                             <input type="submit" value="Upload" />
                         </div>
-                    
+
                     </fieldset>
                 }
 
@@ -40,19 +40,12 @@ new { enctype = "multipart/form-data" }))
         </div>
     </div>
 
-   
-</section>
 
-
-<h1>Download</h1>
-
-<section class="section section-gray">
-    <div class="container">
-        
         <div class="row">
             <div class="col-sm-12 col-md-12 alert-message">
 
                 <h2>Downloads</h2>
+
                 <table>
                     <tr>
                         <th>File Name</th>
@@ -60,20 +53,20 @@ new { enctype = "multipart/form-data" }))
                     </tr>
                     @for (var i = 0; i <= Model.Count - 1; i++)
                     {
-                        <tr>
-                            <td>
-                                @Model[i].ToString()
-                            </td>
-                            <td>
-                                @Html.ActionLink("Download", "Download", new { ImageName = @Model[i].ToString() })
-                            </td>
-                        </tr>
+                    <tr>
+                        <td>
+                            @Model[i].ToString()
+                        </td>
+                        <td>
+                            @Html.ActionLink("Download", "Download", new { ImageName = @Model[i].ToString() })
+                        </td>
+                    </tr>
                     }
                 </table>
 
             </div>
-        </div>
-    </div>
 
+        </div>
+  
 
 </section>
