--- a/CorujaSystem/Areas/Especialista/Views/Ambiente/SobreEspecialista.cshtml
+++ b/CorujaSystem/Areas/Especialista/Views/Ambiente/SobreEspecialista.cshtml
@@ -12,3 +12,14 @@
 </div>
 
 
+<div class="row">
+
+    <div class="col-sm-12">
+        <h4>Sobre</h4>
+
+        <p>
+            O Especialista...
+        </p>
+    </div>
+
+</div>
