--- a/CorujaSystem/Views/Admin/EditRole.cshtml
+++ b/CorujaSystem/Views/Admin/EditRole.cshtml
@@ -35,5 +35,5 @@
 }
 
 <div>
-    @Html.ActionLink("Lista de perfis", "ListOfRoles")
+    @Html.ActionLink("Lista de perfis", "ListOfRoles", new { area = "", controller = "Admin" })
 </div>
