--- a/CorujaSystem/Views/Home/Download.cshtml
+++ b/CorujaSystem/Views/Home/Download.cshtml
@@ -27,7 +27,7 @@
                             foreach (var file in Files)
                             {
                                 <br />
-                                @Html.ActionLink(file, "DownloadFile", new { fileName = file })
+                                @Html.ActionLink(file, "DownloadFile", new { fileName = file },new { @class = "a"})
                                 <br />
                             }
                         }
