--- a/CorujaSystem/Views/Shared/_LayoutAdmin.cshtml
+++ b/CorujaSystem/Views/Shared/_LayoutAdmin.cshtml
@@ -284,6 +284,20 @@ desired effect
                             <li class="active">@Html.ActionLink(" Usuários", "ListOfUsers", "Admin", null, new { @class = "glyphicon glyphicon-menu-right" })</li>
                        </ul>
                     </li>
+
+                    <li class="treeview">
+                        <a href="#">
+                            <i class="fa fa-link"></i> <span>Arquivos</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li class="active">@Html.ActionLink(" Arquivos", "Index", "UserFiles", null, new { @class = "glyphicon glyphicon-menu-right" })</li>
+                        </ul>
+                    </li>
+
+
                 </ul>
                 <!-- /.sidebar-menu -->
             </section>
