--- a/CorujaSystem/Views/Admin/DeleteUser.cshtml
+++ b/CorujaSystem/Views/Admin/DeleteUser.cshtml
@@ -26,7 +26,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Excluir" class="btn btn-default" /> |
-            @Html.ActionLink("Lista de usuários", "ListOfUsers")
+            @Html.ActionLink("Lista de usuários", "ListOfUsers", new { area = "", controller = "Admin" })
         </div>
     }
 </div>
