--- a/CorujaSystem/Views/Admin/EditUser.cshtml
+++ b/CorujaSystem/Views/Admin/EditUser.cshtml
@@ -27,7 +27,7 @@
         </div>
         <div class="form-group">
             @Html.Label("Perfis", new { @class = "control-label col-md-2" })
-            <span class=" col-md-10">
+            <span class= "col-md-10">
                 @foreach (var item in Model.RolesList)
                 {
                     <input type="checkbox" name="SelectedRole" value="@item.Value" checked="@item.Selected" class="checkbox-inline" />
@@ -45,6 +45,6 @@
 }
 
 <div>
-    @Html.ActionLink("Lista de usuários", "ListOfUsers")
+    @Html.ActionLink("Lista de usuários", "ListOfUsers", new { area = "", controller = "Admin" })
 </div>
 
