--- a/CorujaSystem/Views/Admin/RoleDetails.cshtml
+++ b/CorujaSystem/Views/Admin/RoleDetails.cshtml
@@ -39,7 +39,8 @@
 </table>
 <p>
     @Html.ActionLink("Editar", "EditRole", new { id = Model.Id }) |
-    @Html.ActionLink("Lista de perfis", "ListOfRoles")
+    @Html.ActionLink("Lista de perfis", "ListOfRoles", new { area = "", controller = "Admin" })
+
 </p>
 
 
